--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 	<section>
 		<h2>Informations de l'éole :</h2>
 		<ul>
+      <li>Prof de git: Thomas Ecalle</li>
+      <p>vive le git</p>
 			<li>Nom: ESGI</li>
 			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
 			<li>Directeur: Kamal Sananes</li>
