--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <body>
 	<h1>Le super nouveau site de l'école</h1>
 	<section>
-		<h2>Informations de l'éole :</h2>
+		<h2>Informations de l'école :</h2>
 		<ul>
       <li>Prof de git: Thomas Ecalle</li>
       <p>vive le git</p>
 			<li>Nom: ESGI</li>
-			<li>Adresse: 242 Rue du Feaubourg Saint Antoinette, 75011 Paris</li>
-			<li>Directeur: Kamal Sananes</li>
+			<li>Adresse: 242 Rue du Faubourg Saint Antoine, 75011 Paris</li>
+			<li>Directeur: Kamal Hennou</li>
 		</ul>
 	</section>
 </body>
